1.add block service 2.add swagger doc example
