# api/rest/block.go
@@ -2,7 +2,6 @@ package rest
 
 import (
 	"github.com/FiiLabs/block_explorer/api/response"
-	"github.com/FiiLabs/block_explorer/model/vo"
 	"github.com/gin-gonic/gin"
 	"net/http"
 )
@@ -10,15 +9,43 @@ import (
 type BlockController struct {
 }
 
-func (bctl *BlockController) Query(c *gin.Context) {
-	txHash := c.Param("block_height")
-	if txHash == "" {
+func (bctl *BlockController) QueryByHeight(c *gin.Context) {
+	blkHeight := c.Param("block_height")
+	if blkHeight == "" {
 		c.JSON(http.StatusBadRequest, response.FailBadRequest("parameter block_height is required"))
 		return
 	}
 
-	var req vo.BlockReq
-	res, e := blockService.Query(txHash, req)
+	res, e := blockService.QueryBlockByHeight(blkHeight)
+	if e != nil {
+		c.JSON(response.HttpCode(e), response.FailError(e))
+		return
+	}
+
+	c.JSON(http.StatusOK, response.Success(res))
+}
+
+func (bctl *BlockController) QueryByHash(c *gin.Context) {
+	blkHeight := c.Param("block_hash")
+	if blkHeight == "" {
+		c.JSON(http.StatusBadRequest, response.FailBadRequest("parameter block_hash is required"))
+		return
+	}
+
+	res, e := blockService.QueryBlockByHash(blkHeight)
+	if e != nil {
+		c.JSON(response.HttpCode(e), response.FailError(e))
+		return
+	}
+
+	c.JSON(http.StatusOK, response.Success(res))
+}
+
+func (bctl *BlockController) QueryBlocks(c *gin.Context) {
+	q_page := c.DefaultQuery("page", "0")
+	q_size := c.DefaultQuery("size", "10")
+
+	res, e := blockService.QueryBlocks(q_page, q_size)
 	if e != nil {
 		c.JSON(response.HttpCode(e), response.FailError(e))
 		return
