# service/block.go
@@ -5,7 +5,9 @@ import (
 	"github.com/FiiLabs/block_explorer/model/vo"
 )
 type IBlockService interface {
-	Query(hash string, req vo.BlockReq) (*vo.BlockResp, errors.Error)
+	QueryBlockByHeight(height string) (*vo.BlockResp, errors.Error)
+	QueryBlockByHash(hash string) (*vo.BlockResp, errors.Error)
+	QueryBlocks(p_page string, p_size string) (*vo.BlocksResp, errors.Error)
 }
 
 var _ IBlockService = new(BlockService)
@@ -13,12 +15,58 @@ var _ IBlockService = new(BlockService)
 type BlockService struct {
 }
 
-func (svc *BlockService) Query(hash string, req vo.BlockReq) (*vo.BlockResp, errors.Error) {
+// @Summary QueryBlockByHeight
+// @Param block_height path string true "height"
+// @Schemes
+// @Description QueryBlockByHeight
+// @Tags explorer api service
+// @Accept json
+// @Produce json
+// @Success 200 {object} vo.BlockResp
+// @Router /block/height/{block_height} [get]
+func (svc *BlockService) QueryBlockByHeight(height string) (*vo.BlockResp, errors.Error) {
+
+	block,err := blockRepo.GetBlockByHeight(height)
+	if err != nil {
+		return nil, errors.Wrap(err)
+	}
 	return &vo.BlockResp{
-		Height: 1,
-		Hash:hash,
-		Txn:2,
-		Time:3252352,
-		Proposer:"sdsdgadsg",
+		Height: block.Height,
+		Hash:block.Hash,
+		Txn:block.Txn,
+		Time:block.Time,
+		Proposer:block.Proposer,
 	}, nil
+}
+
+func (svc *BlockService) QueryBlockByHash(hash string) (*vo.BlockResp, errors.Error) {
+
+	block,err := blockRepo.GetBlockByHash(hash)
+	if err != nil {
+		return nil, errors.Wrap(err)
+	}
+	return &vo.BlockResp{
+		Height: block.Height,
+		Hash:block.Hash,
+		Txn:block.Txn,
+		Time:block.Time,
+		Proposer:block.Proposer,
+	}, nil
+}
+
+func (svc *BlockService) QueryBlocks(p_page string, p_size string) (*vo.BlocksResp, errors.Error) {
+
+	blocks,err := blockRepo.GetBlocks(p_page, p_size)
+	if err != nil {
+		return nil, errors.Wrap(err)
+	}
+	blks := make(vo.BlocksResp, len(blocks))
+	for i, v := range blocks {
+		blks[i].Txn = v.Txn
+		blks[i].Height = v.Height
+		blks[i].Hash = v.Hash
+		blks[i].Time = v.Time
+		blks[i].Proposer = v.Proposer
+	}
+	return &blks, nil
 }
